--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,9 @@ pytest-html = "^3.1.1"
 pyupgrade = "^2.29.1"
 safety = "^1.10.3"
 black = "^22.3.0"
+prospector = "^1.7.7"
+pyflakes = "^2.4.0"
+types-PyYAML = "^6.0.7"
 
 [tool.black]
 # https://github.com/psf/black
