--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,23 +40,23 @@ typer = {extras = ["all"], version = "^0.4.0"}
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.1"
+black = "^22.3.0"
 coverage = "^6.1.2"
 coverage-badge = "^1.1.0"
-darglint = "^1.8.1"
+darglint = "1.8.1"
 isort = {extras = ["colors"], version = "^5.10.1"}
-mypy = "^0.910"
-mypy-extensions = "^0.4.3"
-pre-commit = "^2.15.0"
-pydocstyle = "^6.1.1"
-pylint = "^2.11.1"
-pytest = "^6.2.5"
-pytest-cov = "^3.0.0"
-pytest-html = "^3.1.1"
-pyupgrade = "^2.29.1"
-safety = "^1.10.3"
-black = "^22.3.0"
+mypy = "^0.950"
+mypy-extensions = "0.4.3"
+pre-commit = "2.15.0"
 prospector = "^1.7.7"
+pydocstyle = "6.1.1"
 pyflakes = "^2.4.0"
+pylint = "^2.11.1"
+pytest = "^7.0.1"
+pytest-cov = "3.0.0"
+pytest-html = "3.1.1"
+pyupgrade = "2.29.1"
+safety = "^1.10.3"
 types-PyYAML = "^6.0.7"
 
 [tool.black]
