--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ rich = "^12.4.1"
 typer = {extras = ["all"], version = "^0.4.0"}
 selenium = "^4.1.5"
 webdriver-manager = "^3.5.4"
+beautifulsoup4 = "^4.11.1"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.1"
