--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ typer = {extras = ["all"], version = "^0.4.0"}
 selenium = "^4.1.5"
 webdriver-manager = "^3.5.4"
 beautifulsoup4 = "^4.11.1"
+nltk = "^3.7"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.1"
@@ -62,6 +63,8 @@ pyupgrade = "2.32.1"
 safety = "^1.10.3"
 types-PyYAML = "^6.0.7"
 types-selenium = "^3.141.9"
+jupyter = "^1.0.0"
+notebook = "^6.4.11"
 
 [tool.black]
 # https://github.com/psf/black
