--- a/cookiecutter-config-file.yml
+++ b/cookiecutter-config-file.yml
@@ -5,7 +5,7 @@ default_context:
   project_description: "Amazon YNAB is a reconciler that scrapes Amazon orders and adds memo info on each corresponding YNAB transaction"
   organization: "self"
   license: "MIT"
-  minimal_python_version: 3.9
+  minimal_python_version: "3.10"
   github_name: "sbarrios93"
   email: "sbarrios93@gmail.com"
   version: "0.1.0"
