--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
   "Topic :: Software Development :: Libraries :: Python Modules",
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
 ]
 
 [tool.poetry.scripts]
@@ -33,14 +33,15 @@ classifiers = [
 "amazon-ynab" = "amazon_ynab.__main__:app"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 
-rich = "^12.4.1"
-typer = {extras = ["all"], version = "^0.4.0"}
-selenium = "^4.1.5"
-webdriver-manager = "^3.5.4"
 beautifulsoup4 = "^4.11.1"
 nltk = "^3.7"
+rich = "^12.4.1"
+selenium = "^4.1.5"
+typer = {extras = ["all"], version = "^0.4.0"}
+types-beautifulsoup4 = "^4.11.1"
+webdriver-manager = "^3.5.4"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.1"
@@ -49,8 +50,10 @@ coverage = "^6.1.2"
 coverage-badge = "^1.1.0"
 darglint = "1.8.1"
 isort = {extras = ["colors"], version = "^5.10.1"}
+jupyter = "^1.0.0"
 mypy = "^0.950"
 mypy-extensions = "0.4.3"
+notebook = "^6.4.11"
 pre-commit = "2.19.0"
 prospector = "^1.7.7"
 pydocstyle = "6.1.1"
@@ -63,8 +66,6 @@ pyupgrade = "2.32.1"
 safety = "^1.10.3"
 types-PyYAML = "^6.0.7"
 types-selenium = "^3.141.9"
-jupyter = "^1.0.0"
-notebook = "^6.4.11"
 
 [tool.black]
 # https://github.com/psf/black
@@ -105,7 +106,7 @@ sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLD
 # https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
 color_output = true
 pretty = true
-python_version = 3.9
+python_version = "3.10"
 show_traceback = true
 
 allow_redefinition = false
