--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,25 +44,25 @@ types-beautifulsoup4 = "^4.11.1"
 webdriver-manager = "^3.5.4"
 
 [tool.poetry.dev-dependencies]
-bandit = "^1.7.1"
-black = "^22.3.0"
-coverage = "^6.1.2"
+bandit = "^1.7.4"
+black = {version = "^22.3.0", allow-prereleases = true}
+coverage = "^6.3.3"
 coverage-badge = "^1.1.0"
-darglint = "1.8.1"
+darglint = "^1.8.1"
 isort = {extras = ["colors"], version = "^5.10.1"}
 jupyter = "^1.0.0"
 mypy = "^0.950"
 mypy-extensions = "0.4.3"
 notebook = "^6.4.11"
-pre-commit = "2.19.0"
+pre-commit = "^2.19.0"
 prospector = "^1.7.7"
-pydocstyle = "6.1.1"
+pydocstyle = "^6.1.1"
 pyflakes = "^2.4.0"
-pylint = "^2.11.1"
-pytest = "^7.0.1"
-pytest-cov = "3.0.0"
-pytest-html = "3.1.1"
-pyupgrade = "2.32.1"
+pylint = "^2.13.9"
+pytest = "^7.1.2"
+pytest-cov = "^3.0.0"
+pytest-html = "^3.1.1"
+pyupgrade = "^2.32.1"
 safety = "^1.10.3"
 types-PyYAML = "^6.0.7"
 types-selenium = "^3.141.9"
