--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ selenium = "^4.1.5"
 typer = {extras = ["all"], version = "^0.4.0"}
 types-beautifulsoup4 = "^4.11.1"
 webdriver-manager = "^3.5.4"
+types-requests = "^2.27.25"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.4"
@@ -66,6 +67,7 @@ pyupgrade = "^2.32.1"
 safety = "^1.10.3"
 types-PyYAML = "^6.0.7"
 types-selenium = "^3.141.9"
+ipykernel = "^6.13.0"
 
 [tool.black]
 # https://github.com/psf/black
