--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,37 @@
+async-generator==1.10; python_version >= "3.7" and python_version < "4.0"
+attrs==21.4.0; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.5.0"
+beautifulsoup4==4.11.1; python_full_version >= "3.6.0"
+certifi==2021.10.8; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
+cffi==1.15.0; os_name == "nt" and implementation_name != "pypy" and python_version >= "3.7" and python_version < "4.0" and (python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7")
+charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3.6"
 click==8.1.3; python_version >= "3.7"
-colorama==0.4.4; python_version >= "3.6" and python_full_version >= "3.6.2" and python_full_version < "4.0.0" and (python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0")
-commonmark==0.9.1; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
-pygments==2.12.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.6"
-rich==10.16.2; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
+colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or python_version >= "3.7" and python_full_version >= "3.5.0" and platform_system == "Windows"
+commonmark==0.9.1; python_full_version >= "3.6.3" and python_full_version < "4.0.0"
+cryptography==37.0.2; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7"
+h11==0.13.0; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.7.0"
+idna==3.3; python_version >= "3.7" and python_version < "4.0" and (python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
+joblib==1.1.0; python_version >= "3.7"
+nltk==3.7; python_version >= "3.7"
+outcome==1.1.0; python_version >= "3.7" and python_version < "4.0"
+pycparser==2.21; python_version >= "3.7" and python_full_version < "3.0.0" and os_name == "nt" and implementation_name != "pypy" and python_version < "4.0" or os_name == "nt" and implementation_name != "pypy" and python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.4.0"
+pygments==2.12.0; python_full_version >= "3.6.3" and python_full_version < "4.0.0" and python_version >= "3.6"
+pyopenssl==22.0.0; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7"
+pysocks==1.7.1; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7"
+regex==2022.4.24; python_version >= "3.7"
+requests==2.27.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+rich==12.4.1; python_full_version >= "3.6.3" and python_full_version < "4.0.0"
+selenium==4.1.5; python_version >= "3.7" and python_version < "4.0"
 shellingham==1.4.0; python_version >= "3.6"
+sniffio==1.2.0; python_version >= "3.7" and python_version < "4.0"
+sortedcontainers==2.4.0; python_version >= "3.7" and python_version < "4.0"
+soupsieve==2.3.2.post1; python_version >= "3.6" and python_full_version >= "3.6.0"
+tqdm==4.64.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
+trio-websocket==0.9.2; python_version >= "3.7" and python_version < "4.0"
+trio==0.20.0; python_version >= "3.7" and python_version < "4.0"
 typer==0.4.1; python_version >= "3.6"
+types-beautifulsoup4==4.11.1
+types-requests==2.27.25
+types-urllib3==1.26.14
+urllib3==1.26.9; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
+webdriver-manager==3.5.4; python_version >= "3.6"
+wsproto==1.1.0; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.7.0"
