--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,20 +39,21 @@ beautifulsoup4 = "^4.11.1"
 nltk = "^3.7"
 rich = "^12.5.1"
 selenium = "^4.4.3"
-typer = {extras = ["all"], version = "^0.6.1"}
+typer = { extras = ["all"], version = "^0.6.1" }
 types-beautifulsoup4 = "^4.11.4"
 webdriver-manager = "^3.8.2"
 types-requests = "^2.28.8"
+mypy-extensions = "^0.4.3"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.4"
-black = {version = "^22.3.0", allow-prereleases = true}
+black = { version = "^22.3.0", allow-prereleases = true }
 coverage = "^6.4.4"
 coverage-badge = "^1.1.0"
 darglint = "^1.8.1"
-isort = {extras = ["colors"], version = "^5.10.1"}
-mypy = "^0.971"
-mypy-extensions = "0.4.3"
+isort = { extras = ["colors"], version = "^5.10.1" }
+mypy = "^0.990"
+mypy-extensions = ">=0.4.3"
 pre-commit = "^2.20.0"
 prospector = "^1.7.7"
 pydocstyle = "^6.1.1"
@@ -97,10 +98,23 @@ py_version = 39
 color_output = true
 include_trailing_comma = true
 indent = 4
-known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
+known_typing = [
+  "typing",
+  "types",
+  "typing_extensions",
+  "mypy",
+  "mypy_extensions",
+]
 multi_line_output = 3
 profile = "black"
-sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
+sections = [
+  "FUTURE",
+  "TYPING",
+  "STDLIB",
+  "THIRDPARTY",
+  "FIRSTPARTY",
+  "LOCALFOLDER",
+]
 
 [tool.mypy]
 # https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
@@ -131,8 +145,22 @@ warn_unused_ignores = true
 [tool.pytest.ini_options]
 # https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
 # Directories that are not visited by pytest collector:
-doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
-norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
+doctest_optionflags = [
+  "NUMBER",
+  "NORMALIZE_WHITESPACE",
+  "IGNORE_EXCEPTION_DETAIL",
+]
+norecursedirs = [
+  "hooks",
+  "*.egg",
+  ".eggs",
+  "dist",
+  "build",
+  "docs",
+  ".tox",
+  ".git",
+  "__pycache__",
+]
 
 # Extra options:
 addopts = [
