--- a/requirements.txt
+++ b/requirements.txt
@@ -99,6 +99,9 @@ idna==3.4 ; python_version >= "3.10" and python_version < "4.0" \
 joblib==1.2.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:091138ed78f800342968c523bdde947e7a305b8594b910a0fea2ab83c3c6d385 \
     --hash=sha256:e1cee4a79e4af22881164f218d4311f60074197fb707e082e803b61f6d137018
+mypy-extensions==0.4.3 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:090fedd75945a69ae91ce1303b5824f428daf5a028d2f6ab8a299250a846f15d \
+    --hash=sha256:2d82818f5bb3e369420cb3c4060a7970edba416647068eb4c5343488a6c604a8
 nltk==3.7 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:ba3de02490308b248f9b94c8bc1ac0683e9aa2ec49ee78536d8667afb5e3eec8 \
     --hash=sha256:d6507d6460cec76d70afea4242a226a7542f85c669177b9c7f562b7cf1b05502
