--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ classifiers = [
 "amazon-ynab" = "amazon_ynab.__main__:app"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.10 <=3.12"
 
 beautifulsoup4 = "^4.11.1"
 nltk = "^3.7"
