--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,14 +18,14 @@ keywords = [] #! Update me
 
 # Pypi classifiers: https://pypi.org/classifiers/
 classifiers = [
-  #! Update me
-  "Development Status :: 3 - Alpha",
-  "Intended Audience :: Developers",
-  "Operating System :: OS Independent",
-  "Topic :: Software Development :: Libraries :: Python Modules",
-  "License :: OSI Approved :: MIT License",
-  "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.10",
+    #! Update me
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "Operating System :: OS Independent",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
 ]
 
 [tool.poetry.scripts]
@@ -34,7 +34,6 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.10 <=3.12"
-
 beautifulsoup4 = "^4.11"
 nltk = "^3.7"
 rich = "^12.6"
@@ -45,7 +44,10 @@ webdriver-manager = "^3.8"
 types-requests = "^2.28"
 mypy-extensions = "^0.4"
 
-[tool.poetry.dev-dependencies]
+
+[tool.poetry.group.dev.dependencies]
+prospector = ">=1.6"
+blacken-docs = "^1.12.1"
 bandit = "^1.7.4"
 black = { version = "^22.3.0", allow-prereleases = true }
 coverage = "^6.4.4"
@@ -55,7 +57,6 @@ isort = { extras = ["colors"], version = "^5.10.1" }
 mypy = "^0.990"
 mypy-extensions = ">=0.4.3"
 pre-commit = "^2.20.0"
-prospector = "^1.7.7"
 pydocstyle = "^6.1.1"
 pyflakes = "^2.5.0"
 pylint = "^2.14.5"
@@ -99,21 +100,21 @@ color_output = true
 include_trailing_comma = true
 indent = 4
 known_typing = [
-  "typing",
-  "types",
-  "typing_extensions",
-  "mypy",
-  "mypy_extensions",
+    "typing",
+    "types",
+    "typing_extensions",
+    "mypy",
+    "mypy_extensions",
 ]
 multi_line_output = 3
 profile = "black"
 sections = [
-  "FUTURE",
-  "TYPING",
-  "STDLIB",
-  "THIRDPARTY",
-  "FIRSTPARTY",
-  "LOCALFOLDER",
+    "FUTURE",
+    "TYPING",
+    "STDLIB",
+    "THIRDPARTY",
+    "FIRSTPARTY",
+    "LOCALFOLDER",
 ]
 
 [tool.mypy]
@@ -146,28 +147,28 @@ warn_unused_ignores = true
 # https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
 # Directories that are not visited by pytest collector:
 doctest_optionflags = [
-  "NUMBER",
-  "NORMALIZE_WHITESPACE",
-  "IGNORE_EXCEPTION_DETAIL",
+    "NUMBER",
+    "NORMALIZE_WHITESPACE",
+    "IGNORE_EXCEPTION_DETAIL",
 ]
 norecursedirs = [
-  "hooks",
-  "*.egg",
-  ".eggs",
-  "dist",
-  "build",
-  "docs",
-  ".tox",
-  ".git",
-  "__pycache__",
+    "hooks",
+    "*.egg",
+    ".eggs",
+    "dist",
+    "build",
+    "docs",
+    ".tox",
+    ".git",
+    "__pycache__",
 ]
 
 # Extra options:
 addopts = [
-  "--strict-markers",
-  "--tb=short",
-  "--doctest-modules",
-  "--doctest-continue-on-failure",
+    "--strict-markers",
+    "--tb=short",
+    "--doctest-modules",
+    "--doctest-continue-on-failure",
 ]
 
 [tool.coverage.run]
