--- a/.editorconfig
+++ b/.editorconfig
@@ -1,24 +1,20 @@
-# Check http://editorconfig.org for more information
-# This is the main config file for this project:
 root = true
 
 [*]
-charset = utf-8
-end_of_line = lf
-insert_final_newline = true
-indent_style = space
-indent_size = 2
-trim_trailing_whitespace = true
-
-[*.{py, pyi}]
 indent_style = space
 indent_size = 4
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
 
-[Makefile]
-indent_style = tab
+[*.py]
+# For isort
+profile = black
 
-[*.md]
-trim_trailing_whitespace = false
+[*.{code-snippets,code-workspace,json,nix,tf,yaml,yml}{,.jinja}]
+indent_size = 2
 
-[*.{diff,patch}]
-trim_trailing_whitespace = false
+# HACK https://github.com/commitizen-tools/commitizen/issues/502
+[CHANGELOG.md]
+indent_size = 2
