--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,9 @@ jobs:
         uses: actions/cache@v3.0.11
         with:
           path: .venv
-          key: venv-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}-${{ hashFiles('poetry.lock') }}
+          key:
+            venv-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}-${{
+            hashFiles('poetry.lock') }}
       - name: Install dependencies
         run: |
           poetry config virtualenvs.in-project true
