--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,6 @@ mypy-extensions = "^0.4"
 
 
 [tool.poetry.group.dev.dependencies]
-prospector = ">=1.6"
 blacken-docs = "^1.12.1"
 bandit = "^1.7.4"
 black = { version = "^22.3.0", allow-prereleases = true }
@@ -58,7 +57,6 @@ mypy = "^0.990"
 mypy-extensions = ">=0.4.3"
 pre-commit = "^2.20.0"
 pydocstyle = "^6.1.1"
-pyflakes = "^2.5.0"
 pylint = "^2.14.5"
 pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
@@ -68,6 +66,7 @@ safety = "^2.1.1"
 types-PyYAML = "^6.0.11"
 types-selenium = "^3.141.9"
 ipykernel = "^6.13.0"
+flake8 = "^6.0.0"
 
 [tool.black]
 # https://github.com/psf/black
