--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,9 @@ jobs:
           poetry config virtualenvs.in-project true
           poetry install
 
+      - name: pre-commit
+      - uses: pre-commit/action@v2.0.0
+
       - name: Run style checks
         run: |
           make check-codestyle
