--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ safety = "^2.1.1"
 types-PyYAML = "^6.0.11"
 types-selenium = "^3.141.9"
 flake8 = "^6.0.0"
+autoflake = "^2.0.0"
 
 [tool.black]
 # https://github.com/psf/black
