--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ darglint = "^1.8.1"
 isort = { extras = ["colors"], version = "^5.10.1" }
 mypy = "^0.990"
 mypy-extensions = ">=0.4.3"
-pre-commit = "^2.20.0"
+pre-commit = ">=3.0.0"
 pydocstyle = "^6.1.1"
 pylint = "^2.14.5"
 pyupgrade = "^2.37.3"
@@ -65,6 +65,7 @@ types-PyYAML = "^6.0.11"
 types-selenium = "^3.141.9"
 flake8 = "^6.0.0"
 autoflake = "^2.0.0"
+pytest-cov = "^4.0.0"
 
 [tool.black]
 # https://github.com/psf/black
