add pre-commit to dev dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dev-dependencies = [
     "types-selenium~=3.141.9",
     "pyright~=1.1.304",
     "ruff~=0.0.262",
-    "pytest~=7.3.1", "commitizen~=3.1.0", "blacken-docs~=1.13.0",
+    "pytest~=7.3.1", "commitizen~=3.1.0", "blacken-docs~=1.13.0", "pre-commit~=3.2.2",
 ]
 managed = true
 
