--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: pre-commit
         run: |
-          pre-commit run --all-files --show-diff-on-failure --color always
+          rye run pre-commit run --all-files --show-diff-on-failure --color always
 
       - name: Run tests
         run: |
