update ci action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,30 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Update local toolchain
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Toolchain info
-        run: |
-          cargo --version --verbose
-          rustc --version
-
-      - name: Get Rye commit hash
-        id: rye-commit-hash
-        run: |
-          echo "::set-output name=hash::$(git ls-remote https://github.com/mitsuhiko/rye.git HEAD | cut -f 1)"
-
-      - name: Set up Rye cache
-        uses: actions/cache@v3.3.1
-        id: rye-cache
-        with:
-          path: ~/.cargo/bin/rye
-          key:
-            rye-cargo-${{ runner.os }}-stable-${{ steps.rye-commit-hash.outputs.hash }}
-
       - name: Install Rye
-        if: steps.rye-cache.outputs.cache-hit != 'true'
-        run: cargo install --git https://github.com/mitsuhiko/rye rye
+        uses: sbarrios93/rye-rust-action@v0.1.0
 
       - name: Set up Python ${{ matrix.python-version }}
         run: rye pin ${{ matrix.python-version }}
