fixes to pass ruff checks
-Added explicit ruff checks to mimic previous setup
-updated pre-commit versions
-fixed items that didn't pass ruff's checks

__main__:
    -rewrite typer option staements using Annotated so they pass checks

amazon/amazon_client:
    -replace crypto functions with stronger ones

engine/matcher:
    -simplify logic

ynab/ynab_client:
    -replace http status constant
    -rename budget_id since it isn't used

Misc:
    -import sort order
    -remove non-specific noqas, replace with specific if still needed
    -if except is pass, use contextlib.suppress

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,28 @@ exclude = '''
 '''
 preview = true
 
+[tool.ruff]
+line-length = 88
+target-version = "py310"
+select = [
+    "E",   # pycodestyle
+    "F",   # pyflakes
+    "W",   # pycodestyle
+    "B",   # flake8-bugbear
+    "I",   # isort
+    "PL",  # pylint
+    "RUF", # Ruff-specific rules
+    "UP",  # pyupgrade
+    "S",   # flake8-bandit
+    "A",   # flake8-builtins3
+    "T10", # flake8-debugger
+]
+# Old Flake8 ignores for Ruff (enable if needed?)
+# ignore = ["E203", "E501"]
+
+[tool.ruff.per-file-ignores]
+# Tests can use magic values, assertions, and relative imports
+"tests/*.py" = ["PLR2004", "S101", "TCH002"]
 
 [tool.pytest.ini_options]
 # https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
